--- a/Inrzynieria programowania obserwer/Inrzynieria programowania obserwer.vcxproj
+++ b/Inrzynieria programowania obserwer/Inrzynieria programowania obserwer.vcxproj
@@ -127,7 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="data_pool.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="obserwer.cpp" />
+    <ClCompile Include="person.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="client.h" />
+    <ClInclude Include="data_pool.h" />
+    <ClInclude Include="obserwer.h" />
+    <ClInclude Include="person.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
